erster Ansatz repariertes mobile devices

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -190,10 +190,11 @@ $font-size-h3-contentmenu:	16;
 $font-size-quotes:		$font-size-base;
 $font-size-quotes-cites:	($font-size-base - 1);    
 
-
 $font-size-content-meta:	14;
 $font-size-pagination-h3:	$font-size-content-meta;
 $font-size-pagination-links:	$font-size-content-meta;
+
+$font-size-mobile-meta:	24;
 
 // Define breakpoints
 
