--- a/css/sass/structure/_structure.scss
+++ b/css/sass/structure/_structure.scss
@@ -19,10 +19,7 @@
 @import "navigation/navigation";
 
 // Hero
-@import "hero";
-
-// Breadcrumb
-@import "breadcrumb";
+@import "hero/hero";
 
 
 // Content specials
