--- a/css/sass/structure/content/_event-items.scss
+++ b/css/sass/structure/content/_event-items.scss
@@ -161,7 +161,7 @@
 
 
 
-@media (max-width: $breakMD) {
+@media (max-width: $screen-sm -1) {
 	#content .widget_event_widget .event-info {
 		margin-left: 60px;
 	}
