--- a/css/sass/structure/navigation/_metanav.scss
+++ b/css/sass/structure/navigation/_metanav.scss
@@ -129,7 +129,7 @@
 	@include transition(background, 0.1s);
     }
     
-    @media (max-width: $screen-sm) {
+    @media (max-width: $screen-sm - 1) {
 	li.fauhome:before {	
 	    display: none;
 	    content: "";
