--- a/css/sass/elements/_devider.scss
+++ b/css/sass/elements/_devider.scss
@@ -6,12 +6,22 @@ hr {
 	position: relative;
 	z-index: 10;
 	clear: both;
-	display: block;
-	height: 20px;
 	background: #fff;
 	border: none;
 	outline: none;
-	margin: 0 0 40px 0;
+	display: none;
+	
+	@media (min-width: $screen-xs) {
+	    display: block;
+	}
+
+	height: 40px;
+	margin: 10px 0 30px;
+	
+	@media (min-width: $screen-sm) {
+	    margin: 0 0 40px 0;
+	    height: 20px;	    
+	}
 	
 	&.big,
 	.page-template-page-start &,
@@ -50,18 +60,3 @@ hr {
 }
 
 
-
-@media (max-width: $breakXS) {
-
-    hr {
-	display: none;
-    }
-}
-
-
-@media (max-width: $breakMD) {
-    	hr {
-	    height: 40px;
-	    margin: 10px 0 30px;
-	}
-}
