--- a/css/sass/structure/_footer.scss
+++ b/css/sass/structure/_footer.scss
@@ -26,7 +26,7 @@
 	a:hover, a:focus {
 		text-decoration: underline;
 	}
-	@media (min-width: $screen-sm +1) {
+	@media (min-width: $screen-sm) {
 	    padding: 20px 0;
 	}
 }
@@ -43,7 +43,7 @@
 		background: none;
 	}
 }
-@media (max-width: $breakSM) {
+@media (max-width: $screen-xs - 1) {
  #footer {
 	li {
 	    line-height: 15px;
@@ -72,7 +72,7 @@
 	}
     }
 }
-@media (max-width: $breakMD) {
+@media (max-width: $screen-sm - 1) {
     #footer {
 	    .span3 {
 		width: 48%;
