--- a/css/sass/structure/_meta.scss
+++ b/css/sass/structure/_meta.scss
@@ -20,7 +20,7 @@
 	    @include px2rem($font-size-meta);
 	}
 	
-     @media (min-width: $screen-sm + 1) {
+     @media (min-width: $screen-sm ) {
 	position: fixed;
     }
 }
@@ -59,7 +59,7 @@
 	height: auto;
     }
     
-    @media (min-width: $screen-sm + 1) {
+    @media (min-width: $screen-sm ) {
 	height: 40px;
 	overflow: hidden;
     }
@@ -68,73 +68,72 @@
 
 .meta-search {
     .searchform {
+	@include transition(0.5s,all);
 	display: none;
-	    border: none;
-	    margin: 0;
-	    padding: 5px 0;
+	border: none;
+	margin: 0;
+	padding: 5px 0;
 
-	    input[type="text"] {
-		    @include border-radius(20px);
-		    padding: 5px 35px 5px 10px;
-		    width: 220px;
-		    background: $colorMeta;
-		    border: none;
-		    outline: none;
-		    color: #fff;
-		    height: 30px;
-		    display: inline-block;
-		    margin-right: -25px;
-		    margin-bottom: 0px;
-		    &:focus {
-			    background-color: $colorMetaHover;
-		    }
-
-		    @media (min-width: $screen-sm +1) {
-			 width: 160px;
-		    }
-    		    @media (min-width: $screen-md +1) {
-			padding: 5px 35px 5px 35px;
-		    }
-		    @media (min-width: $screen-lg) {
-			width: 200px;
-		    }
-
-	    }
-
-	    input[type="submit"] {
-		    @include border-radius(20px);
-		    position: relative;
-		    z-index: 100;
-		    height: 30px;
-		    padding: 0 12px;
-		    font-weight: bold;
-		    border: none;
-		    outline: none;
-		    color: $colorMeta;
-		    background: #fff;
-		    display: inline-block;
-
-		    &:hover, &:focus {
-			    background: $colorMetaLightest;
-			    @include box-shadow(0 0 5px rgba(0,0,0,0.2));
-		    }
-	    }
-
-	    label {
-		    @extend .screen-reader-text;		
-	    }
-	    .searchicon {
-		display: inline;
-		@extend .fa;
-		@extend .fa-search;
-		position: relative;
-		margin-right: -30px;
+	input[type="text"] {
+		@include border-radius(20px);
+		padding: 5px 35px 5px 10px;
+		width: 220px;
+		background: $colorMeta;
+		border: none;
+		outline: none;
 		color: #fff;
+		height: 30px;
+		display: inline-block;
+		margin-right: -25px;
+		margin-bottom: 0px;
+		&:focus {
+			background-color: $colorMetaHover;
+		}
 
-		
-	    }
+		@media (min-width: $screen-sm ) {
+		     width: 160px;
+		     padding-left: 35px;
+		}
+		@media (min-width: $screen-lg) {
+		    width: 200px;
+		}
+
+	}
+
+	input[type="submit"] {
+		@include border-radius(20px);
+		position: relative;
+		z-index: 100;
+		height: 30px;
+		padding: 0 12px;
+		font-weight: bold;
+		border: none;
+		outline: none;
+		color: $colorMeta;
+		background: #fff;
+		display: inline-block;
+
+		&:hover, &:focus {
+			background: $colorMetaLightest;
+			@include box-shadow(0 0 5px rgba(0,0,0,0.2));
+		}
+	}
+
+	label {
+		@extend .screen-reader-text;		
+	}
+	.searchicon {
+	    display: inline;
+	    @extend .fa;
+	    @extend .fa-search;
+	    position: relative;
+	    margin-right: -30px;
+	    color: #fff;
+
+
+	}
     }
-    @media (max-width: $screen-sm) {
+    @media (max-width: $screen-sm - 1) {
 	width: 100%;
 	.searchform {
 	    text-align: center;
@@ -148,7 +147,7 @@
 	    }
 	}
     }
-    @media (min-width: $screen-sm + 1) {
+    @media (min-width: $screen-sm ) {
 	.searchform {
 	    display: inline-block;
 	}
@@ -168,7 +167,7 @@
   z-index: 100;
   color: $colorMeta;
    
-  @media (max-width: $screen-sm) { 
+  @media (max-width: $screen-sm - 1) { 
     .js & {
 	display: block;  
     }
