--- a/css/sass/structure/content/_accordion.scss
+++ b/css/sass/structure/content/_accordion.scss
@@ -205,7 +205,7 @@
     } 
 }
 
-@media (max-width: $breakMD) {
+@media (max-width: $screen-sm -1) {
     .accordion-group {
 		margin-left: 15px;
 		margin-right: 15px;
