--- a/css/sass/structure/content/_posts.scss
+++ b/css/sass/structure/content/_posts.scss
@@ -3,9 +3,9 @@
 /*-----------------------------------------------------------------------------------*/
 
 .post-image {
-    float: right;
-    margin: 20px 0 10px 20px;
     text-align: center;
+    margin: 0;
+    float: none;
     
     .post-image-caption {
 	    @include px2rem($font-size-content-meta);
@@ -13,6 +13,12 @@
 	    width: 300px;
 	    text-align: left;
     }
+    
+    @media (min-width: $screen-sm) {
+	float: right;
+	margin: 20px 0 10px 20px;
+    }
+    
 }
 .post-meta {
 	    display: block;
@@ -73,10 +79,3 @@
 	}
 }
 
-@media (max-width: $breakMD) {
-    .post-image {
-		margin: 0 !important;
-		float: none !important;
-	}
-
-}
