--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -219,7 +219,7 @@ span[itemprop="honorificSuffix"] {
 	    color: $colorText;
     }
     li.person-info-address {
-		white-space: pre;
+	white-space: pre-line;
     }
     .content-person {
 	border: none;
@@ -237,10 +237,10 @@ span[itemprop="honorificSuffix"] {
 	    margin: 0;
 	    
 	    .span1, .span3, {
-		display: inline-block;
+		display: block;
 		float: none;
-		width: auto;
 		margin: 0;
+		width: auto;
 	    }
 	}
 	.person-info-description {
