--- a/css/sass/structure/hero/_breadcrumb.scss
+++ b/css/sass/structure/hero/_breadcrumb.scss
@@ -10,7 +10,7 @@
 	    padding: 0 0 0 15px;
 	}
 
-	@media (min-width: $screen-sm + 1) {
+	@media (min-width: $screen-sm ) {
 	    h1 {
 		padding: 30px 0 10px 0;
 	    }
@@ -29,11 +29,7 @@
 	line-height: 50px;
 	display: none;
 
-	@media (max-width: $breakLG) {
-	    right: 15px;
-
-	}
-	@media (min-width: $screen-sm ) {
+	@media (min-width: $screen-md ) {
 	    display: inline-block;
 	}
     }	
