--- a/css/sass/elements/_tables.scss
+++ b/css/sass/elements/_tables.scss
@@ -96,5 +96,14 @@ table {
 			background-position: left 5px;
 		}
 	}
+	
+	
 }
-
+.sorttable {
+	    th::after {
+		@extend .fa;
+		margin-left: 5px;
+		content: "\f0dc";
+		
+	    }
+	}
